--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.png" />
+
+    <meta
+      name="description"
+      content="Manage job postings effortlessly with JobPortal. Create, read, update, and delete job listings in a user-friendly, responsive web application."
+    />
+    <meta
+      name="keywords"
+      content="Job-Portal Career-Portal Jobs engineering-jobs react daisyui"
+    />
+    <meta name="author" content="Sarowar Alam Sagor" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Portal</title>
   </head>
